refactor:create a basic navbar and add new svg file

--- a/src/components/home/Navbar.astro
+++ b/src/components/home/Navbar.astro
@@ -1,13 +1,15 @@
 ---
-
+ import { getImage } from 'astro/assets';
 ---
 <section>
   <div>
-    <div></div>
+    <div>
+      <img src="" alt="">
+    </div>
     <div>
         <div>
             <ul>
-                <li><a href="/">Inicio</a></li>
+                <li><a href="/">Inicio</a></li>s
                 <li><a href="/empresa">Empresa</a></li>
                 <li><a href="/asfalto">Asfalto</a></li>
                 <li><a href="/equipo">Equipo</a></li>
